Fixed the typo language for DynamoDB notebook from PySpark to Scala 2) Fixed the typo for rdbms notebook in heading to RDBMS instead of RDBS

--- a/examples/jdbc-rdbms-with-spark.ipynb
+++ b/examples/jdbc-rdbms-with-spark.ipynb
@@ -5,7 +5,7 @@
    "id": "44cde1cc",
    "metadata": {},
    "source": [
-    "# Connect RDBS using jdbc connector from EMR Studio Notebook using Pyspark, Spark Scala, and SparkR\n",
+    "# Connect RDBMS using jdbc connector from EMR Studio Notebook using Pyspark, Spark Scala, and SparkR\n",
     "\n",
     "#### Topics covered in this example\n",
     "\n",
