--- a/examples/dynamodb-with-spark.ipynb
+++ b/examples/dynamodb-with-spark.ipynb
@@ -105,7 +105,7 @@
    "id": "664d194a",
    "metadata": {},
    "source": [
-    "## Read data using Pyspark"
+    "## Read data using Scala"
    ]
   },
   {
