--- a/examples/query-hudi-0.9.0-dataset-with-spark-sql.ipynb
+++ b/examples/query-hudi-0.9.0-dataset-with-spark-sql.ipynb
@@ -23,7 +23,7 @@
     "* To use Hudi with Amazon EMR Notebooks, you must first copy the Hudi jar files from the local file system to HDFS, present on the master node of the EMR cluster. You then use the notebook to configure your EMR notebook to use Hudi. Follow the `Setup` steps.\n",
     "* <b> EMR 6.5.0</b> cluster should be attached to this notebook and should have the `Spark` and `Hive` applications installed. At the time of this article writing, Hudi 0.9.0 is available as default on EMR 6.5.0\n",
     "* This example uses a [Amazon Customer reviews](https://s3.amazonaws.com/amazon-reviews-pds/readme.html) public dataset, hence the EMR cluster attached to this notebook must have internet connectivity.\n",
-    "* This notebook uses the `pySpark` kernel.\n",
+    "* This notebook uses the `Spark` kernel.\n",
     "***"
    ]
   },
