--- a/examples/iceberg-using-hive-catalog.ipynb
+++ b/examples/iceberg-using-hive-catalog.ipynb
@@ -112,6 +112,7 @@
     "    \n",
     "    For example: s3://my_s3_bucket/iceberg/db/amazon_reviews_iceberg\n",
     "\n",
+    "update the my_s3_bucket with the bucket which you create.\n",
     "***"
    ]
   },
