--- a/examples/iceberg-using-hive-catalog.ipynb
+++ b/examples/iceberg-using-hive-catalog.ipynb
@@ -2,7 +2,24 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "4a72f2e8-52fb-4b57-8bdb-90a327dbda39",
+   "id": "b0ef68ac-9b8b-41d0-9e21-2f398bc6ea13",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-04-22T22:24:46.159901Z",
+     "iopub.status.busy": "2022-04-22T22:24:46.159679Z",
+     "iopub.status.idle": "2022-04-22T22:24:46.177881Z",
+     "shell.execute_reply": "2022-04-22T22:24:46.177080Z",
+     "shell.execute_reply.started": "2022-04-22T22:24:46.159876Z"
+    },
+    "tags": []
+   },
+   "source": [
+    "# Iceberg Example Using Hive Catalog Notebook"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e92709c0-3dfb-44f9-a4e7-e9f643fa98ff",
    "metadata": {
     "execution": {
      "iopub.execute_input": "2022-04-22T22:24:46.159901Z",
@@ -26,7 +43,7 @@
     "&emsp;&emsp;&emsp;&emsp;a) [Adding Columns](#adding_columns) <br>\n",
     "&emsp;&emsp;&emsp;&emsp;c) [Dropping Columns](#dropping_columns) <br>\n",
     "5) [Time Travel](#time_travel) <br>\n",
-    "&emsp;&emsp;&emsp;&emsp;a) [Rollback](#rollback) <br>\n"
+    "&emsp;&emsp;&emsp;&emsp;a) [Rollback](#rollback) <br>"
    ]
   },
   {
@@ -64,7 +81,7 @@
     "              }\n",
     "            ]\n",
     "\n",
-    "The first classification enables Iceberg. The second one configures Glue Catalog as the Metastore for Spark applications in this cluster.\n",
+    "The classification enables Iceberg.\n",
     "\n",
     "* Here is a sample CLI command to create an EMR cluster. Do remember to replace <span style=\"color:red\">EMR-STUDIO-SUBNET</span> with one of the subnets in which your EMR Studio is running:\n",
     "\n",
@@ -128,8 +145,13 @@
    },
    "source": [
     "\n",
+    "\n",
     "<a id=\"configure_iceberg\"></a>\n",
-    "## Configuring Iceberg on Spark session"
+    "## Configuring Iceberg on Spark session\n",
+    "\n",
+    "Configure your Spark session using the %%configure magic command. We will be using Hive Catalog for Iceberg Tables\n",
+    "\n",
+    "Update the <span style=\"color:red\">my_bucket_name </span>in below configuration which you create the Prerequisite - Create S3 Bucket section of workshop"
    ]
   },
   {
@@ -533,7 +555,7 @@
    "source": [
     "<a id=\"dropping_columns\"></a>\n",
     "### Dropping Columns\n",
-    "Now, there is a change in business requirements, we are not interested in the `comment` column anymore and need to remove that column from our table. Iceberg allows us to do that easily."
+    "Now, there is a change in business requirements, we are not interested in the `high_rated_product` column anymore and need to remove that column from our table. Iceberg allows us to do that easily."
    ]
   },
   {
@@ -687,58 +709,50 @@
     "<a id=\"rollback\"></a>\n",
     "### Rollback\n",
     "\n",
-    "Lets recover the deleted records for verified_purchase = 'N', replace the xxxxxxxxxxxxx with Snapshot id from Table History. Use the Snapshot with parent_id = null from Table History"
+    "To undo the recent changes, we can execute Iceberg stored procedures using `CALL` statement to rollback the state of the table to any historical commit using `rollback_to_snapshot` stored procedure. We could also use `rollback_to_timestamp`.\n",
+    "\n",
+    "Recover the table to its original state, replace the xxxxxxxxxxxxx with Snapshot id from Table History. Use the snapshot_id with parent_id = null from Table History (first record)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "94473cb1-8fcb-4d40-96d7-c57214e267c1",
+   "id": "3073f8a6-121f-4768-b112-7ebae68d28f4",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "df_timetravel = spark.read.option(\"snapshot-id\", xxxxxxxxxxxxx).format(\"iceberg\").load(\"dev.db.amazon_reviews_iceberg\")"
+    "spark.sql(\"CALL dev.system.rollback_to_snapshot('db.amazon_reviews_iceberg', xxxxxxxxxxxxx)\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d4f8bc24-5ad0-4b1b-8e94-34d65b6d62c3",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-05-10T18:47:19.451231Z",
+     "iopub.status.busy": "2022-05-10T18:47:19.451013Z",
+     "iopub.status.idle": "2022-05-10T18:47:28.739582Z",
+     "shell.execute_reply": "2022-05-10T18:47:28.738989Z",
+     "shell.execute_reply.started": "2022-05-10T18:47:19.451207Z"
+    },
+    "tags": []
+   },
+   "source": [
+    "Our table is now back to original state"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2e13f4fd-323a-4818-bf0f-976890f79971",
+   "id": "3dce569e-93c4-43c3-a962-c72fcc83f8ef",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "#Register the DataFrame as a temporary table\n",
-    "df_timetravel.createOrReplaceTempView(\"snapshot_table\")\n",
-    "#Test the snapshot table has  records for verified_purchase = 'N'\n",
-    "spark.sql(\"\"\"select * from snapshot_table where verified_purchase = 'N' \"\"\").show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "20d84804-edc3-4f99-8ba7-155b7e52770f",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "# lets insert the deleted rows using snapshot_table into original table \n",
-    "spark.sql(\"\"\"insert into dev.db.amazon_reviews_iceberg select * from snapshot_table where verified_purchase = 'N' \"\"\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "eb741847-7855-44ae-b494-4c308b2566d8",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#lets Test if data is restored. Below query should produce some records.\n",
-    "spark.sql(\"\"\"select * from dev.db.amazon_reviews_iceberg where verified_purchase = 'N'\"\"\").show()"
+    "spark.sql(\"select * from dev.db.amazon_reviews_iceberg\").show()"
    ]
   }
  ],
