--- a/examples/deltalake-example-notebook-pyspark.ipynb
+++ b/examples/deltalake-example-notebook-pyspark.ipynb
@@ -39,7 +39,7 @@
    "source": [
     "## Introduction\n",
     "\n",
-    "Delta Lake is an open source project that enables building a Lake House architecture on top of data lakes. Delta Lake provides ACID transactions, scalable metadata handling, and unifies streaming and batch data processing on top of existing data lakes, such as S3, and HDFS. Specifically, Delta Lake offers:\n",
+    "Delta Lake is an open source project that enables building a modern data architecture on top of data lakes. Delta Lake provides ACID transactions, scalable metadata handling, and unifies streaming and batch data processing on top of existing data lakes, such as S3, and HDFS. Specifically, Delta Lake offers:\n",
     "* ACID transactions on Spark: Serializable isolation levels ensure that readers never see inconsistent data.\n",
     "* Scalable metadata handling: Leverages Spark distributed processing power to handle all the metadata for petabyte-scale tables with billions of files at ease.\n",
     "* Streaming and batch unification: A table in Delta Lake is a batch table as well as a streaming source and sink. Streaming data ingest, batch historic backfill, interactive queries all just work out of the box.\n",
