--- a/examples/emr_rs_connect_using_role.ipynb
+++ b/examples/emr_rs_connect_using_role.ipynb
@@ -112,7 +112,7 @@
    "id": "f3fb38b0-e7e8-4503-906b-96d6730c8867",
    "metadata": {},
    "source": [
-    "## Import Requred lib files"
+    "## Connect to Amazon Redshift using pyspark"
    ]
   },
   {
@@ -168,6 +168,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "0ae2ea22-2709-45f5-bfeb-793d19a10500",
+   "metadata": {},
+   "source": [
+    "## Connect to Amazon Redshift using scalaspark"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "e23f7b64-b555-4bf4-a715-acc4586593e4",
@@ -202,6 +210,14 @@
     "\n",
     "jdbcDF.write.mode(\"append\").\n",
     "    format(\"io.github.spark_redshift_community.spark.redshift\").option(\"url\", str_jdbc_url).option(\"dbtable\", str_tgt_table).option(\"aws_iam_role\", str_iam_role).option(\"tempdir\", str_s3_path).save()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cf56be3c-38ab-4013-9e22-c739f04e6ca9",
+   "metadata": {},
+   "source": [
+    "## Connect to Amazon Redshift using SparkR"
    ]
   },
   {
