update db to replace_db_here
update db to replace_db_here

--- a/examples/emr_rs_connect_using_role.ipynb
+++ b/examples/emr_rs_connect_using_role.ipynb
@@ -132,8 +132,8 @@
     "from pyspark.sql import SQLContext\n",
     "\n",
     "\n",
-    "#jdbc:redshift:iam://examplecluster.<account-id>.<region>.redshift.amazonaws.com:5439/<DB>\n",
-    "str_jdbc_url=\"jdbc:redshift:iam://<XXXXXX>.<abc123xyz789>.<region>.redshift.amazonaws.com:5439/<db>\"\n",
+    "#jdbc:redshift:iam://examplecluster.<account-id>.<region>.redshift.amazonaws.com:5439/DB\n",
+    "str_jdbc_url=\"jdbc:redshift:iam://<XXXXXX>.<abc123xyz789>.<region>.redshift.amazonaws.com:5439/replace_db_here\"\n",
     "str_src_table=\" \"\n",
     "str_tgt_table=\" \"\n",
     "str_s3_path=\" \"\n",
@@ -188,8 +188,8 @@
     "\n",
     "//Declare the variables and replace the variables values as appropiate\n",
     "\n",
-    "//jdbc:redshift:iam://examplecluster.<account-id>.<region>.redshift.amazonaws.com:5439/<DB>\n",
-    "val  str_jdbc_url=str_jdbc_url=\"jdbc:redshift:iam://<XXXXXX>.<abc123xyz789>.<region>.redshift.amazonaws.com:5439/<db>\"\n",
+    "//jdbc:redshift:iam://examplecluster.<account-id>.<region>.redshift.amazonaws.com:5439/DB\n",
+    "val  str_jdbc_url=str_jdbc_url=\"jdbc:redshift:iam://<XXXXXX>.<abc123xyz789>.<region>.redshift.amazonaws.com:5439/replace_db_here\"\n",
     "val  str_src_table=\" \"\n",
     "val  str_tgt_table=\" \"\n",
     "val  str_s3_path=\" \"\n",
@@ -230,8 +230,8 @@
     "\n",
     "#Declare the variables and replace the variables values as appropiate\n",
     "\n",
-    "#jdbc:redshift:iam://examplecluster.<account-id>.<region>.redshift.amazonaws.com:5439/<DB>\n",
-    "str_jdbc_url=\"jdbc:redshift:iam://<XXXXXX>.<abc123xyz789>.<region>.redshift.amazonaws.com:5439/<db>\"\n",
+    "#jdbc:redshift:iam://examplecluster.<account-id>.<region>.redshift.amazonaws.com:5439/DB\n",
+    "str_jdbc_url=\"jdbc:redshift:iam://<XXXXXX>.<abc123xyz789>.<region>.redshift.amazonaws.com:5439/replace_db_here\"\n",
     "str_src_table=\" \"\n",
     "str_tgt_table=\" \"\n",
     "str_s3_path=\" \"\n",
