removed special chars
removed special chars

--- a/examples/emr_rs_connect_using_username_password.ipynb
+++ b/examples/emr_rs_connect_using_username_password.ipynb
@@ -128,8 +128,8 @@
     "from pyspark import SparkContext\n",
     "from pyspark.sql import SQLContext\n",
     "\n",
-    "#jdbc:redshift://<jdbc-url>:5439/<db>?user=<usr>&password=<pwd>\n",
-    "str_jdbc_url=\"jdbc:redshift://XXXXX:5439/<db>?user=<XXX>&password=<YYYY>\"\n",
+    "#jdbc:redshift://jdbc-url:5439/db?user=usr&password=pwd\n",
+    "str_jdbc_url=\"jdbc:redshift://XXXXX:5439/db?user=XXX&password=YYYY\"\n",
     "str_src_table=\" \"\n",
     "str_tgt_table=\" \"\n",
     "str_s3_path=\" \"\n",
@@ -184,8 +184,8 @@
     "\n",
     "//Declare the variables and replace the variables values as appropiate\n",
     "\n",
-    "//#jdbc:redshift://<jdbc-url>:5439/<db>?user=<usr>&password=<pwd>\n",
-    "val  str_jdbc_url=\"jdbc:redshift://XXXXX:5439/<db>?user=<XXX>&password=<YYYY>\"\n",
+    "//#jdbc:redshift://jdbc-url:5439/db?user=usr&password=pwd\n",
+    "val  str_jdbc_url=\"jdbc:redshift://XXXXX:5439/db?user=XXX&password=YYYY\"\n",
     "val  str_src_table=\" \"\n",
     "val  str_tgt_table=\" \"\n",
     "val  str_s3_path=\" \"\n",
@@ -227,8 +227,8 @@
     "\n",
     "#Declare the variables and replace the variables values as appropiate\n",
     "\n",
-    "#jdbc:redshift://<jdbc-url>:5439/<db>?user=<usr>&password=<pwd>\n",
-    "str_jdbc_url=\"jdbc:redshift://XXXXX:5439/<db>?user=<XXX>&password=<YYYY>\"\n",
+    "#jdbc:redshift://<jdbc-url>:5439/db?user=usr&password=pwd\n",
+    "str_jdbc_url=\"jdbc:redshift://XXXXX:5439/db?user=XXX&password=YYYY\"\n",
     "str_src_table=\" \"\n",
     "str_tgt_table=\" \"\n",
     "str_s3_path=\" \"\n",
