updated to reflect replace_DB_name
updated to reflect replace_DB_name

--- a/examples/redshift-connect-from-spark-using-iam-role.ipynb
+++ b/examples/redshift-connect-from-spark-using-iam-role.ipynb
@@ -14,7 +14,7 @@
     "tags": []
    },
    "source": [
-    "# Connect to Amazon Redshift with Pyspark using EMR-RedShift connector from EMR Studio using Role"
+    "# Connect to Amazon Redshift with Pyspark using EMR-RedShift connector from EMR Studio using Role "
    ]
   },
   {
@@ -133,7 +133,7 @@
     "\n",
     "\n",
     "#jdbc:redshift:iam://examplecluster.<account-id>.<region>.redshift.amazonaws.com:5439/DB\n",
-    "str_jdbc_url=\"jdbc:redshift:iam://<XXXXXX>.<abc123xyz789>.<region>.redshift.amazonaws.com:5439/replace_db_here\"\n",
+    "str_jdbc_url=\"jdbc:redshift:iam://<XXXXXX>.<abc123xyz789>.<region>.redshift.amazonaws.com:5439/replace_DB_name\"\n",
     "str_src_table=\" \"\n",
     "str_tgt_table=\" \"\n",
     "str_s3_path=\" \"\n",
@@ -189,7 +189,7 @@
     "//Declare the variables and replace the variables values as appropiate\n",
     "\n",
     "//jdbc:redshift:iam://examplecluster.<account-id>.<region>.redshift.amazonaws.com:5439/DB\n",
-    "val  str_jdbc_url=str_jdbc_url=\"jdbc:redshift:iam://<XXXXXX>.<abc123xyz789>.<region>.redshift.amazonaws.com:5439/replace_db_here\"\n",
+    "val  str_jdbc_url=str_jdbc_url=\"jdbc:redshift:iam://<XXXXXX>.<abc123xyz789>.<region>.redshift.amazonaws.com:5439/replace_DB_name\"\n",
     "val  str_src_table=\" \"\n",
     "val  str_tgt_table=\" \"\n",
     "val  str_s3_path=\" \"\n",
@@ -231,7 +231,7 @@
     "#Declare the variables and replace the variables values as appropiate\n",
     "\n",
     "#jdbc:redshift:iam://examplecluster.<account-id>.<region>.redshift.amazonaws.com:5439/DB\n",
-    "str_jdbc_url=\"jdbc:redshift:iam://<XXXXXX>.<abc123xyz789>.<region>.redshift.amazonaws.com:5439/replace_db_here\"\n",
+    "str_jdbc_url=\"jdbc:redshift:iam://<XXXXXX>.<abc123xyz789>.<region>.redshift.amazonaws.com:5439/replace_DB_name\"\n",
     "str_src_table=\" \"\n",
     "str_tgt_table=\" \"\n",
     "str_s3_path=\" \"\n",
