--- a/examples/redshift-connect-from-spark-using-username-password.ipynb
+++ b/examples/redshift-connect-from-spark-using-username-password.ipynb
@@ -14,7 +14,7 @@
     "tags": []
    },
    "source": [
-    "# Connect to Amazon Redshift with Pyspark using EMR-RedShift connector from EMR Studio using Username and Password"
+    "# Connect to Amazon Redshift with Pyspark using EMR-RedShift connector from EMR Studio using Username and Password "
    ]
   },
   {
@@ -129,7 +129,7 @@
     "from pyspark.sql import SQLContext\n",
     "\n",
     "#jdbc:redshift://jdbc-url:5439/db?user=usr&password=pwd\n",
-    "str_jdbc_url=\"jdbc:redshift://XXXXX:5439/replace_db_name?user=XXX&password=YYYY\"\n",
+    "str_jdbc_url=\"jdbc:redshift://XXXXX:5439/replace_DB_name?user=XXX&password=YYYY\"\n",
     "str_src_table=\" \"\n",
     "str_tgt_table=\" \"\n",
     "str_s3_path=\" \"\n",
@@ -185,7 +185,7 @@
     "//Declare the variables and replace the variables values as appropiate\n",
     "\n",
     "//#jdbc:redshift://jdbc-url:5439/db?user=usr&password=pwd\n",
-    "val  str_jdbc_url=\"jdbc:redshift://XXXXX:5439/replace_db_name?user=XXX&password=YYYY\"\n",
+    "val  str_jdbc_url=\"jdbc:redshift://XXXXX:5439/replace_DB_name?user=XXX&password=YYYY\"\n",
     "val  str_src_table=\" \"\n",
     "val  str_tgt_table=\" \"\n",
     "val  str_s3_path=\" \"\n",
@@ -228,7 +228,7 @@
     "#Declare the variables and replace the variables values as appropiate\n",
     "\n",
     "#jdbc:redshift://<jdbc-url>:5439/db?user=usr&password=pwd\n",
-    "str_jdbc_url=\"jdbc:redshift://XXXXX:5439/replace_db_name?user=XXX&password=YYYY\"\n",
+    "str_jdbc_url=\"jdbc:redshift://XXXXX:5439/replace_DB_name?user=XXX&password=YYYY\"\n",
     "str_src_table=\" \"\n",
     "str_tgt_table=\" \"\n",
     "str_s3_path=\" \"\n",
