Fix pip installation of scikit-learn
its not sklearn!

--- a/examples/visualize-data-with-pandas-matplotlib.ipynb
+++ b/examples/visualize-data-with-pandas-matplotlib.ipynb
@@ -283,7 +283,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%pip install sklearn"
+    "%pip install scikit-learn"
    ]
   },
   {
