--- a/examples/machine-learning-with-pyspark-linear-regression.ipynb
+++ b/examples/machine-learning-with-pyspark-linear-regression.ipynb
@@ -56,7 +56,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = spark.read.format(\"csv\").load(\"s3://nyc-tlc/trip data/yellow_tripdata_2020-11.csv\", inferSchema = True, header = True)"
+    "df = spark.read.format(\"parquet\").load(\"s3://nyc-tlc/trip data/yellow_tripdata_2022-12.parquet\", inferSchema = True, header = True)"
    ]
   },
   {
@@ -133,7 +133,7 @@
     "    outputCol = \"features\")\n",
     "\n",
     "# Transform the data\n",
-    "v_df = vectorAssembler.transform(df)\n",
+    "v_df = vectorAssembler.setHandleInvalid("skip").transform(df)\n",
     "\n",
     "# View the transformed data\n",
     "v_df = v_df.select([\"features\", \"total_amount\"])\n",
