Fix ML linear regression example

--- a/examples/machine-learning-with-pyspark-linear-regression.ipynb
+++ b/examples/machine-learning-with-pyspark-linear-regression.ipynb
@@ -53,10 +53,15 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "human-probe",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
-    "df = spark.read.format(\"parquet\").load(\"s3://nyc-tlc/trip data/yellow_tripdata_2022-12.parquet\", inferSchema = True, header = True)"
+    "df = spark.read.format(\"parquet\") \\\n",
+    ".load(\"s3://nyc-tlc/trip data/yellow_tripdata_2022-12.parquet\", \n",
+    "      inferSchema = True, \n",
+    "      header = True)"
    ]
   },
   {
@@ -71,7 +76,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "distinct-dollar",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "# Mark the dataFrame for caching in memory\n",
@@ -88,14 +95,20 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "descending-messaging",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "# Get the summary of the columns\n",
-    "df.select(\"total_amount\", \"tip_amount\").describe().show()\n",
+    "df.select(\"total_amount\", \"tip_amount\")\\\n",
+    ".describe()\\\n",
+    ".show()\n",
     "\n",
     "# Value counts of VendorID column\n",
-    "df.groupBy(\"VendorID\").count().show()"
+    "df.groupBy(\"VendorID\")\\\n",
+    ".count()\\\n",
+    ".show()"
    ]
   },
   {
@@ -112,7 +125,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "magnetic-anaheim",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "from pyspark.ml.feature import VectorAssembler\n",
@@ -133,7 +148,7 @@
     "    outputCol = \"features\")\n",
     "\n",
     "# Transform the data\n",
-    "v_df = vectorAssembler.setHandleInvalid("skip").transform(df)\n",
+    "v_df = vectorAssembler.setHandleInvalid(\"skip\").transform(df)\n",
     "\n",
     "# View the transformed data\n",
     "v_df = v_df.select([\"features\", \"total_amount\"])\n",
@@ -152,7 +167,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "monthly-ranch",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "splits = v_df.randomSplit([0.7, 0.3])\n",
@@ -172,12 +189,18 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "golden-industry",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "from pyspark.ml.regression import LinearRegression\n",
     "\n",
-    "lr = LinearRegression(featuresCol = \"features\", labelCol = \"total_amount\", maxIter = 100, regParam = 0.3, elasticNetParam = 0.8)\n",
+    "lr = LinearRegression(featuresCol = \"features\", \\\n",
+    "                      labelCol = \"total_amount\", \\\n",
+    "                      maxIter = 100, \\\n",
+    "                      regParam = 0.3, \\\n",
+    "                      elasticNetParam = 0.8)\n",
     "lr_model = lr.fit(train_df)\n",
     "print(\"Coefficients: \" + str(lr_model.coefficients))\n",
     "print(\"Intercept: \" + str(lr_model.intercept))"
@@ -195,7 +218,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "waiting-healthcare",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "training_summary = lr_model.summary\n",
@@ -215,13 +240,19 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "arabic-corpus",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "predictions = lr_model.transform(test_df)\n",
     "\n",
     "from pyspark.sql.functions import col\n",
-    "predictions.filter(predictions.total_amount > 10.0).select(\"prediction\", \"total_amount\").withColumn(\"diff\", col(\"prediction\") - col(\"total_amount\")).withColumn(\"diff%\", (col(\"diff\") / col(\"total_amount\")) * 100).show()"
+    "predictions.filter(predictions.total_amount > 10.0)\\\n",
+    ".select(\"prediction\", \"total_amount\")\\\n",
+    ".withColumn(\"diff\", col(\"prediction\") - col(\"total_amount\"))\\\n",
+    ".withColumn(\"diff%\", (col(\"diff\") / col(\"total_amount\")) * 100)\\\n",
+    ".show()"
    ]
   },
   {
@@ -236,20 +267,32 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "thirty-beaver",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "from pyspark.ml.evaluation import RegressionEvaluator\n",
     "\n",
-    "lr_evaluator = RegressionEvaluator(predictionCol = \"prediction\", labelCol = \"total_amount\",metricName = \"r2\")\n",
+    "lr_evaluator = RegressionEvaluator(predictionCol = \"prediction\", \\\n",
+    "                                   labelCol = \"total_amount\", \\\n",
+    "                                   metricName = \"r2\")\n",
     "print(\"R Squared (R2) on test data = %g\" % lr_evaluator.evaluate(predictions))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "26f8ecab-a88c-4840-9550-b3a99c177226",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
    "display_name": "PySpark",
-   "language": "",
+   "language": "python",
    "name": "pysparkkernel"
   },
   "language_info": {
@@ -257,6 +300,7 @@
     "name": "python",
     "version": 3
    },
+   "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "pyspark",
    "pygments_lexer": "python3"
