Address review comments

--- a/examples/Getting-started-emr-serverless.ipynb
+++ b/examples/Getting-started-emr-serverless.ipynb
@@ -68,13 +68,14 @@
    "outputs": [],
    "source": [
     "%%configure -f\n",
-    "{\"conf\": {\n",
-    "\"spark.pyspark.virtualenv.enabled\":\"true\",\n",
-    "\"spark.pyspark.virtualenv.bin.path\":\"/usr/bin/virtualenv\",\n",
-    "\"spark.pyspark.virtualenv.type\":\"native\",\n",
-    "\"spark.pyspark.python\":\"/usr/bin/python3\",\n",
-    "\"spark.executorEnv.PYSPARK_PYTHON\":\"/usr/bin/python3\"\n",
-    "}\n",
+    "{\n",
+    "  \"conf\": {\n",
+    "    \"spark.pyspark.virtualenv.enabled\": \"true\",\n",
+    "    \"spark.pyspark.virtualenv.bin.path\": \"/usr/bin/virtualenv\",\n",
+    "    \"spark.pyspark.virtualenv.type\": \"native\",\n",
+    "    \"spark.pyspark.python\": \"/usr/bin/python3\",\n",
+    "    \"spark.executorEnv.PYSPARK_PYTHON\": \"/usr/bin/python3\"\n",
+    "  }\n",
     "}"
    ]
   },
@@ -163,8 +164,8 @@
    "source": [
     "file_name = \"s3://athena-examples-us-east-1/notebooks/yellow_tripdata_2016-01.parquet\"\n",
     "\n",
-    "taxi_df = (spark.read.format(\"parquet\").option(\"header\", \"true\").option(\n",
-    "    \"inferSchema\", \"true\").load(file_name))"
+    "taxi_df = (spark.read.format(\"parquet\").option(\"header\", \"true\") \\\n",
+    "           .option(\"inferSchema\", \"true\").load(file_name))"
    ]
   },
   {
@@ -231,7 +232,8 @@
     "taxi_df.createOrReplaceTempView(\"taxis\")\n",
     "\n",
     "sqlDF = spark.sql(\n",
-    "    \"SELECT DOLocationID, sum(total_amount) as sum_total_amount FROM taxis where DOLocationID < 25 GRoup by DOLocationID ORDER BY DOLocationID\"\n",
+    "    \"SELECT DOLocationID, sum(total_amount) as sum_total_amount \\\n",
+    "     FROM taxis where DOLocationID < 25 Group by DOLocationID ORDER BY DOLocationID\"\n",
     ")\n",
     "sqlDF.show(50)"
    ]
