--- a/examples/hudi-emr-serverless.ipynb
+++ b/examples/hudi-emr-serverless.ipynb
@@ -166,7 +166,7 @@
    "id": "deb14d09",
    "metadata": {},
    "source": [
-    "### You have made it to the end of the this notebook!!"
+    "### You have made it to the end of this notebook!!"
    ]
   }
  ],
