--- a/examples/iceberg-emr-serverless.ipynb
+++ b/examples/iceberg-emr-serverless.ipynb
@@ -161,7 +161,7 @@
    "id": "7a126d4b",
    "metadata": {},
    "source": [
-    "### You have made it to the end of the this notebook!!"
+    "### You have made it to the end of this notebook!!"
    ]
   }
  ],
