--- a/examples/delta-emr-serverless.ipynb
+++ b/examples/delta-emr-serverless.ipynb
@@ -155,7 +155,7 @@
    "id": "3dbfb8c8",
    "metadata": {},
    "source": [
-    "### You have made it to the end of the this notebook!!"
+    "### You have made it to the end of this notebook!!"
    ]
   }
  ],
