Fix EMR Serverless Notbook example typo

--- a/examples/Getting-started-emr-serverless.ipynb
+++ b/examples/Getting-started-emr-serverless.ipynb
@@ -84,7 +84,7 @@
    "id": "b2165194",
    "metadata": {},
    "source": [
-    "Let's start a Spark session:"
+    "Start a Spark session:"
    ]
   },
   {
@@ -104,7 +104,7 @@
    "id": "1ea0659c",
    "metadata": {},
    "source": [
-    "Let's run the `%%info` magic command which shows the Spark configuration for the current session as well as provides links to navigate to the live Spark UI for the session:"
+    "Run the `%%info` magic command which shows the Spark configuration for the current session as well as provides links to navigate to the live Spark UI for the session:"
    ]
   },
   {
