--- a/examples/iceberg-emr-serverless.ipynb
+++ b/examples/iceberg-emr-serverless.ipynb
@@ -106,7 +106,7 @@
     "creation_date string,\n",
     "last_update_time string)\n",
     "USING iceberg\n",
-    "location 's3://my_bucket/aws_workshop/iceberg_table'\"\"\")\n",
+    "location \"\"\" + \"\\\"s3://my_bucket/aws_workshop/iceberg_table\\\"\")\n",
     "\n",
     "data.writeTo(\"glue_catalog.default.iceberg_table\").append()"
    ]
