--- a/examples/word-count-emr-serverless.ipynb
+++ b/examples/word-count-emr-serverless.ipynb
@@ -192,9 +192,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Athena PySpark",
+   "display_name": "PySpark",
    "language": "python",
-   "name": "kepler_python_kernel"
+   "name": "spark_magic_pyspark"
   },
   "language_info": {
    "codemirror_mode": {
@@ -203,7 +203,7 @@
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
-   "name": "Python_Session",
+   "name": "pyspark",
    "pygments_lexer": "python3"
   }
  },
